--- a/lib/src/hero_list_component.html
+++ b/lib/src/hero_list_component.html
@@ -1,8 +1,13 @@
 <!--<h1>{{title}}</h1>-->
 <h2>Heroes</h2>
 
-<my-hero [hero]="selected"></my-hero>
-
+<!--<my-hero [hero]="selected"></my-hero>-->
+<div *ngIf="selected != null">
+    <h2>
+        {{selected.name | uppercase}} is my hero
+    </h2>
+    <button (click)="gotoDetail()">View Details</button>
+</div>
 
 <ul class="heroes">
     <li *ngFor="let hero of heroes"
