--- a/lib/src/hero_list_component.html
+++ b/lib/src/hero_list_component.html
@@ -1,5 +1,12 @@
 <!--<h1>{{title}}</h1>-->
 <h2>Heroes</h2>
+<div>
+    <h3>Add A Hero to list!</h3>
+    <label>Hero name:</label> <input #heroName />
+    <button (click)="add(heroName.value); heroName.value=''">
+        Add
+    </button>
+</div>
 
 <!--<my-hero [hero]="selected"></my-hero>-->
 <div *ngIf="selected != null">
@@ -14,5 +21,7 @@
         [class.selected]="hero === selected"
         (click)="onSelect(hero)">
         <span class="badge">{{hero.id}}</span> {{hero.name}}
+        <button class="delete"
+                (click)="delete(hero); $event.stopPropagation()">x</button>
     </li>
 </ul>
